test/negative/clafertransitionconstraint03.cfr
// Test for negative clafer constraint

a
 xor b ?
  	c =[]=> d
  	d 
  	e 




